// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component snapshots AppButton 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#bb86fc",
      "borderRadius": 8,
      "marginHorizontal": 4,
      "opacity": 1,
      "paddingHorizontal": 12,
      "paddingVertical": 10,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#fff",
          "fontSize": 16,
          "fontWeight": "bold",
        },
        undefined,
      ]
    }
  >
    OK
  </Text>
</View>
`;

exports[`Component snapshots FloatingActionButton 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#bb86fc",
      "borderRadius": 8,
      "bottom": 32,
      "elevation": 4,
      "height": 56,
      "justifyContent": "center",
      "opacity": 1,
      "position": "absolute",
      "right": 32,
      "width": 56,
    }
  }
>
  <Text
    style={
      {
        "color": "#fff",
        "fontSize": 32,
        "lineHeight": 32,
      }
    }
  >
    +
  </Text>
</View>
`;

exports[`Component snapshots TaskItem 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#1e1e1e",
        "borderRadius": 8,
        "flexDirection": "row",
        "marginVertical": 6,
        "opacity": 1,
        "paddingLeft": 16,
        "paddingRight": 8,
        "paddingVertical": 12,
        "transform": [
          {
            "translateX": 0,
          },
        ],
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "padding": 8,
        }
      }
    >
      <Checkbox
        onValueChange={[Function]}
        style={
          {
            "height": 20,
            "width": 20,
          }
        }
        value={false}
      />
    </View>
    <View
      style={
        {
          "flex": 1,
          "marginLeft": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#fff",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        Test
      </Text>
      <Text
        style={
          {
            "color": "#aaa",
            "fontSize": 12,
          }
        }
      >
        1h
      </Text>
      <Text
        style={
          {
            "color": "#aaa",
            "fontSize": 12,
          }
        }
      >
        Due 
        03/01/2023
      </Text>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "marginLeft": 8,
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 6,
              "height": 12,
              "marginHorizontal": 2,
              "width": 12,
            },
            {
              "backgroundColor": "rgb(255, 0, 0)",
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "borderRadius": 6,
              "height": 12,
              "marginHorizontal": 2,
              "width": 12,
            },
            {
              "backgroundColor": "rgb(255, 0, 0)",
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "borderRadius": 6,
              "height": 12,
              "marginHorizontal": 2,
              "width": 12,
            },
            {
              "backgroundColor": "rgb(255, 0, 0)",
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "borderRadius": 6,
              "height": 12,
              "marginHorizontal": 2,
              "width": 12,
            },
            {
              "backgroundColor": "rgb(255, 0, 0)",
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "borderRadius": 6,
              "height": 12,
              "marginHorizontal": 2,
              "width": 12,
            },
            {
              "backgroundColor": "rgb(255, 0, 0)",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`Component snapshots TodoItem 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#1e1e1e",
      "borderRadius": 8,
      "flexDirection": "row",
      "marginVertical": 6,
      "opacity": 1,
      "paddingLeft": 16,
      "paddingRight": 8,
      "paddingVertical": 12,
      "transform": [
        {
          "translateX": 0,
        },
      ],
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
        "padding": 8,
      }
    }
  >
    <Checkbox
      onValueChange={[Function]}
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
      value={false}
    />
  </View>
  <View
    style={
      {
        "flex": 1,
        "marginLeft": 16,
      }
    }
  >
    <TextInput
      editable={false}
      style={
        {
          "color": "#fff",
          "fontSize": 16,
        }
      }
      value="Do"
    />
  </View>
</View>
`;

exports[`Component snapshots UrgencyPicker 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginVertical": 8,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 10,
          "height": 20,
          "marginHorizontal": 2,
          "width": 20,
        },
        {
          "backgroundColor": "rgb(255, 255, 0)",
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 10,
          "height": 20,
          "marginHorizontal": 2,
          "width": 20,
        },
        {
          "backgroundColor": "rgb(255, 255, 0)",
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 10,
          "height": 20,
          "marginHorizontal": 2,
          "width": 20,
        },
        {
          "backgroundColor": "rgb(255, 255, 0)",
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 10,
          "height": 20,
          "marginHorizontal": 2,
          "width": 20,
        },
        {
          "backgroundColor": "#555",
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 10,
          "height": 20,
          "marginHorizontal": 2,
          "width": 20,
        },
        {
          "backgroundColor": "#555",
        },
      ]
    }
  />
</View>
`;
